elk.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: elk
  labels:
    app: elk
spec:
  replicas: 1
  selector:
    matchLabels:
      app: elk
  template:
    metadata:
      labels:
        app: elk
    spec:
      containers:
      - name: elk
        image: sebp/elk:7.13.2
        imagePullPolicy: IfNotPresent
        resources:
           limits:
             cpu: 1500m
             memory: "6Gi"
        volumeMounts:        
        - name: elk-data
          mountPath: /var/lib/elasticsearch
        ports:
        - containerPort: 5601
        - containerPort: 9200
        - containerPort: 5044
      volumes:
      - name: elk-data
        hostPath:
          path: /volumes/elk
      
---
apiVersion: v1
kind: Service
metadata:
  name: elk
  labels:
    app: elk
spec:
  selector:
    app: elk
  ports:
  - name: port1
    protocol: TCP
    port: 5601
  - name: port2
    protocol: TCP
    port: 9200
  - name: port3
    protocol: TCP
    port: 5044
