frontendjsonfy.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  labels:
    run: nginx
spec:
  ports:
    - port: 80
      protocol: TCP
  selector:
    app:  nginx

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  selector:
    matchLabels:
      app: nginx
  replicas: 1
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: fedegin/frontend-jsonfy-filebeat:metricbeat1
        # resources:
        #    limits:
        #      cpu: 100m
        #      memory: "512m"
        ports:
        - containerPort: 80
