ingress.yml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    #kubernetes.io/ingress.class: "traefik"    
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /matomo
        backend:
          serviceName: matomo-service
          servicePort: 80
      - path: /app
        backend:
          serviceName: nginx-service
          servicePort: 80
      - path: /kibana
        backend:
          serviceName: elk
          servicePort: 5601

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroute
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`matomo.local`)
    kind: Rule
    services:
    - name: matomo-service
      port: 80
  - match: Host(`frontend.local`)
    kind: Rule
    services:
    - name: nginx-service
      port: 80
  - match: Host(`frontendbase.local`)
    kind: Rule
    services:
    - name: nginx-base-service
      port: 80  
  - match: Host(`kibana.local`)
    kind: Rule
    services:
    - name: elk
      port: 5601
